Fix spacing issue on member profile report. (#1188)

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -1231,7 +1231,9 @@ td.dataTables_empty {
     @extend %typography-section-title;
     margin-top: 0;
   }
-
+  .row, &.row {
+    padding-left: 0;
+  }
   .date-time {
     font-weight: $semibold-weight
   }
